21.05.2021
    - Fix #1002 space stops working when opening mixer (rj)
20.05.2021
    - Fix #998: Add dedicated keyboard shortcut for deleting tracks in Arranger. (kybos)
    - Fix: Use proper widgets in midi sync and midi config dialogs. (kybos)
    - Fix: Don't show (and loop over) up to 200 unused ports in midi sync dialog. (kybos)
    - Fix: MMC fastforward/rewind functionality (issue #652) (rj)
    - More to 16.05: Fix midi metronome w/ latency correction. And rewrite 'stuck notes' code. (Tim)
      Class MidiPlayEvent now has a latency member. The 'stuck notes' code uses it for inclusion
       when converting from stuck-note-off ticks to frames. Midi metronome timing was incorrect.
18.05.2021
    - Synth selection dialog improvements: Current item is always preselected;
        Info about multi-channel effects added; Better handling of Favorites (kybos)
    - New submenus for Favorites and Recently used synths (kybos)
    - Removed nested synth submenus (kybos)
16.05.2021
    - Fix issue 779: Missing notes if too close together. Broken 29.06.2019. (Tim)
14.05.2021
    - Added support for more MMC commands, including REC, Rewind, Forward (rj)
    - Improved support for midi remote control, can now toggle REC enable for instance. (rj)
01.05.2021
    - Update tool/lib versions to Ubuntu 18.04 LTS level. (kybos)
    - Update c++ version to c++17. (kybos)
    - Fix: Many clang errors/warnings. (kybos)
    - Remove obsolete Qt switches, remove unused includes. (kybos)
    - Update github actions to Ubuntu 18.04. (kybos)
30.04.2021
    - Fix #986: Crash in lv2 plugins when removed while native GUI is open. (kybos)
29.04.2021
    - Fix: Track list: "Move single armed track with selection" function trying to arm 
        invalid tracks. (kybos)
    - Fix: Deactivate recording button when last armed track is deleted. (kybos)
28.04.2021
    - Fix: Number of bars not updating when midi resolution is changed. (kybos)
27.04.2021